Fix paint offset and clips in SPv2.

Previously we neglected to adjust for the paint offset of a LayoutObject within
its transform space. Furthermore, we had some corner-case bugs in clipping.

The former is tested by the newly added test as well as
PaintLayerTest.CompositedBoundsAbsPosGrandchild. The latter is tested by
three of the existing PaintLayerClipper tests.

BUG=671864
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2621243002
Cr-Commit-Position: refs/heads/master@{#443743}

Former-commit-id: 013d385f0e25567c5f91eb440e5d5c092e1bb0e1