third_party/WebKit/Source/core/paint/PaintLayerClipper.h
@@ -214,10 +214,14 @@ class CORE_EXPORT PaintLayerClipper {
   bool shouldClipOverflow(const ClipRectsContext&) const;
   bool shouldRespectOverflowClip(const ClipRectsContext&) const;
 
+  // Returned clip rect is in the space of the context's rootLayer.
   ClipRect clipRectWithGeometryMapper(const ClipRectsContext&,
                                       bool isForeground) const;
+  // Mutates the given rect into a rect in the space of the context's
+  // rootLayer.
   void mapLocalToRootWithGeometryMapper(const ClipRectsContext&,
-                                        LayoutRect& localRect) const;
+                                        LayoutRect&) const;
+  // Same as calculateRects, but using GeometryMapper.
   void calculateRectsWithGeometryMapper(
       const ClipRectsContext&,
       const LayoutRect& paintDirtyRect,
@@ -232,6 +236,8 @@ class CORE_EXPORT PaintLayerClipper {
 
   const PaintLayer& m_layer;
   std::unique_ptr<GeometryMapper> m_geometryMapper;
+
+  friend class PaintLayerClipperTest;
 };
 
 }  // namespace blink
